--- a/Contact.html
+++ b/Contact.html
@@ -39,14 +39,14 @@ li a:hover:not(.active) {
 </head>
 <body>
 	
-	<h1><img src="karate.png" alt="champion martial arts"><br>Champion Martial Arts</h1>
+	<h1><img src="karate.PNG" alt="champion martial arts"><br>Champion Martial Arts</h1>
 <nav>
 <ul>
  <li><a href="index.html">Home</a></li>
-<li><a href="https://rteeter19.github.io/fid/championmartialarts/news.html">News</a></li>
+<li><a href="https://rteeter19.github.io/championmartialarts/news.html">News</a></li>
  <li><a href="gallery.html">Gallery</a></li>
-  <li><a href="https://rteeter19.github.io/fid/championmartialarts/reasons.html">Why Should i do martial arts?</a></li>
- <li><a href="https://rteeter19.github.io/fid/championmartialarts/contact.html">Contact us</a></li>
+  <li><a href="https://rteeter19.github.io/championmartialarts/reasons.html">Why Should i do martial arts?</a></li>
+ <li><a href="https://rteeter19.github.io/championmartialarts/contact.html">Contact us</a></li>
 </ul>
 	<p>Contact Champion martial arts today for signup and information about us.</p>
 		<p class="contact">Email: <a href="mailto:Championma@gmail.com">Championma@gmail.com </a></p>
