--- a/news.html
+++ b/news.html
@@ -49,14 +49,14 @@ li a:hover:not(.active) {
 </style>
 </head>
 <body>
- <h1><img src="karate.png" alt="champion martial arts"><br>Champion Martial Arts</h1>
+ <h1><img src="karate.PNG" alt="champion martial arts"><br>Champion Martial Arts</h1>
 <ul>
   <ul>
   <li><a href="index.html">Home</a></li>
-<li><a href="https://rteeter19.github.io/fid/championmartialarts/news.html">News</a></li>
+<li><a href="https://rteeter19.github.io/championmartialarts/news.html">News</a></li>
  <li><a href="gallery.html">Gallery</a></li>
-  <li><a href="https://rteeter19.github.io/fid/championmartialarts/reasons.html">Why Should i do martial arts?</a></li>
- <li><a href="https://rteeter19.github.io/fid/championmartialarts/contact.html">Contact us</a></li>
+  <li><a href="https://rteeter19.github.io/championmartialarts/reasons.html">Why Should i do martial arts?</a></li>
+ <li><a href="https://rteeter19.github.io/championmartialarts/contact.html">Contact us</a></li>
 </ul>
 </nav>
 </header>
