--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@ li a:hover:not(.active) {
 </style>
 </head>
 <body>
-	<h1><img src="karate.png" alt="champion martial arts"><br>Champion Martial Arts</h1>
+	<h1><img src="karate.PNG" alt="champion martial arts"><br>Champion Martial Arts</h1>
 <ul>
   <ul>
   <li><a href="index.html">Home</a></li>
@@ -61,15 +61,15 @@ li a:hover:not(.active) {
 <p>Not only is our Studio amazing,It's also where tons of our martial arts we teach are practiced! Our visitors often stop to admire our  arts with a quick Snapchat before considering signing up. We've collected a few photos and information about each art.(listed below).</p>
 
 <h2>Kenpo karate</h2>
-<p><a href="kenpo.html"><img src="kenpo.PNG" alt="Kenpo" width="200" height="200"></a><br>
+<p><img src="kenpo.PNG" alt="Kenpo" width="200" height="200"></a><br>
   American Kenpo Karate (/ˈkɛnpoʊ/), also known as American Kenpo and Kenpo Karate, is an updated system of martial arts based on modern-day street fighting that applies logic and practicality. It is characterized by the use of quick and powerful strikes delivered from all of the body's natural weapons, powered by rapid stance transitions, called "shifting." Beginners are introduced to basic attack responses, which comprise a larger system taught through scripted scenarios, which allow instructors a platform to share concepts and principles Ed Parker emphasized in his teachings.</p>
 
 <h2>Taekwondo</h2>
-<p><a href="taekwondo.html"><img src="taekwondo.PNG" alt="taekwandoe" width="200" height="200"></a><br>
+<p><img src="taekwondo.PNG" alt="taekwandoe" width="200" height="200"></a><br>
 Taekwondo, Tae Kwon Do or Taekwon-Do (/ˌtaɪkwɒnˈdoʊ, ˌtaɪˈkwɒndoʊ/;[3][4][5] Korean: 태권도/跆拳道 [tʰɛ.k͈wʌn.do] (About this soundlisten)) is a Korean martial art, characterized by punching and kicking techniques, with emphasis on head-height kicks, jumping spinning kicks, and fast kicking techniques. The literal translation for tae kwon do is "kicking," "punching," and "the art or way of."  </p>
 
 <h2>Jujitzu</h2>
-<p><a href="jujutsu.html"><img src="jujutsu.PNG" alt="jujutsu" width="200" height="200"></a><br>
+<p><img src="jujutsu.PNG" alt="jujutsu" width="200" height="200"></a><br>
 Jujutsu (Japanese: 柔術 jūjutsu About this soundlisten (help·info)), also known as jiu-jitsu and ju-jitsu, is a family of Japanese martial arts and a system of close combat (unarmed or with a minor weapon) that can be used in a defensive or offensive manner to kill or subdue one or more weaponless or armed and armored opponents.[1][2] A subset of techniques from certain styles of jujutsu was used to develop many modern martial arts and combat sports, such as judo, sambo, ARB, Brazilian jiu-jitsu, and mixed martial arts. .</p>
     <ul>
  <li><a href="index.html">Back to Home page</a></li>
